# zen-intelligence

./: Dockerfile  Makefile  main.py  pyproject.toml  readme.md
.claude/: settings.local.json
.github/workflows/: build.yml
commons/qdrant/: qdrant_client.py  qdrant_helper.py
features/chunking/: chunking_service.py
features/embedding/: embedding_routes.py  embedding_service.py
features/search/: search_routes.py  search_service.py
features/similarity/: similarity_routes.py  similarity_service.py
