[project]
name = "zen-intelligence"
version = "0.1.0"
description = "Semantic intelligence service for Zen Notes"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "fastembed==0.4.2",
    "qdrant-client==1.12.1",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "unmarkd>=1.1.2",
    "spacy>=3.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commons", "features"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ['py39']
